# ruffandroid

./: README.md  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/androidTest/java/com/amoseui/ruffandroid/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/amoseui/ruffjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/java/com/amoseui/ruffandroid/: MainActivity.java
app/src/main/java/com/amoseui/ruffjni/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/amoseui/ruffandroid/: ExampleUnitTest.java
app/src/test/java/com/amoseui/ruffjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativetest/: build.gradle
nativetest/src/androidTest/java/com/amoseui/ruffjni/nativetest/: ExampleInstrumentedTest.java
nativetest/src/main/: AndroidManifest.xml
nativetest/src/main/cpp/: CMakeLists.txt  main_test.cpp
nativetest/src/main/java/com/amoseui/ruffjni/nativetest/: NativeTest.java
nativetest/src/test/java/com/amoseui/ruffjni/nativetest/: ExampleUnitTest.java
